--- a/Maude.tex
+++ b/Maude.tex
@@ -126,8 +126,8 @@ $$\{\_\}: State \to System$$
 
 Further to this condition, it is required that the sort \textit{System} does not appear in $s_1, \ldots s_n$  or the domain  of  any operator $f: s_1, \ldots s_n$.
 
-\item For each rewrite rule with $u$ and $u'$ of sort \textit{System} in $\mathfrak{R}$ of the following form\footnote{All other rules which are not of this form are called \emph{local} rules and have an instantaneous zero time elapse. These do not act on the system as a whole but rather on one or more of its components.}:
-$$[l]: u(x_1,\ldots ,x_n) \to u'(x_1,\ldots ,x_n if C(x_1, \ldots ,x_n) \ \textbf{if} \ C(x_1, \ldots ,x_n)$$
+\item For each rewrite rule with $u$ and $u'$ of sort \textit{System} in $\mathfrak{R}$ of the following form\footnote{All other rules which are not of this form are called \emph{local} rules and have an instantaneous zero time lapse. These do not act on the system as a whole but rather on one or more of its components.}:
+$$[l]: u(x_1,\ldots ,x_n) \to u'(x_1,\ldots ,x_n) \ \textbf{if} \ C(x_1, \ldots ,x_n)$$
 
 
 there is an assigned term $\tau_l(x_1 \ldots x_n)$ of sort $\phi(Time)$ within $\tau$.
@@ -183,7 +183,7 @@ endfm
 The operation sd(N,N') computes the symmetric difference of N and N' i.e. it subtracts the smaller of the two operands from the larger.
 
 \subsubsection*{Example Real Time Maude Specification}
-We have devised the following simple model of a train Real Time Maude that moves one unit of distance in one time unit along a circular track of length 500. It defines a sort \texttt{TrainState} and a single state \texttt{move}. We have a constructor train of type \texttt{System} which consists of a train state and a natural number.  
+We have devised the following simple model of a train in Real Time Maude that moves one unit of distance in one time unit along a circular track of length 500. It defines a sort \texttt{TrainState} and a single state \texttt{move}. We have a constructor train of type \texttt{System} which consists of a train state and a natural number.  
 \medskip
 \begin{lstlisting}
 (tmod DISCRETE-SINGLE-TRAIN is protecting NAT-TIME-DOMAIN .
@@ -198,14 +198,14 @@ We have devised the following simple model of a train Real Time Maude that moves
          
 endtm)
 \end{lstlisting}
-There is a condition rewrite rule called travel which enables the train to move as long as its current distance is less than 500. The specification also contains a reset rule that instantaneously resets the trains distance back to zero when it reaches 500. This is implemented as a rewriting rule instead of an equation as there is no need for the term to be rewritten in both directions.
+There is a conditional rewrite rule called travel which enables the train to move as long as its current distance is less than 500. The specification also contains a reset rule that instantaneously resets the trains distance back to zero when it reaches 500. This is implemented as a rewriting rule instead of an equation as there is no need for the term to be rewritten in both directions.
 
 
 \subsubsection*{Executing a Real Time Maude Specification}
 Real Time Maude allows one to execute or simulate a real time system by applying rewriting rules to a term of type \texttt{System}.
 The command \texttt{(trew \{System\} in time <= t)} will attempt to rewrite the system to a state $t$ time units in the future. This is not always possible though as the system may deadlock. The following command attempts to rewrite a train, which initially has distance $0$, to its state in 100 units of time in the future: 
 \begin{center}
-\texttt{(trew {train(move,0)} in time $\leq$ 100 .)}
+\texttt{(trew {train(move,0)} in time <= 100 .)}
 \end{center}
 
 The result from this timed rewrite is as follows:
@@ -219,17 +219,17 @@ Result ClockedSystem :
   {train(move,100)} in time 100
 \end{lstlisting}
 
-The ability to perform such simulations is useful as it allows for the liveness of a system to be checked. It also provides another way of validating the correctness of a model by perform many of these executions and checking the behaviour of the system over time.
+The ability to perform such simulations is useful as it allows for the liveness of a system to be checked. It also provides another way of validating the correctness of a model by performing many of these executions and checking the behaviour of the system over time.
 
-\subsection{Object oriented Specification in Real Time Maude}
-Real Time Maude is based on Full Maude which contains message and object constructs for object oriented specification. Using these constructs its possible to model ERTMS as several synchronously communicating processes. A Real Time Maude specification consists of  \emph{timed object oriented modules} which start with \texttt{tomod} and end with \texttt{endtom}.
+\subsection{Object Oriented Specification in Real Time Maude}
+Real Time Maude is based on Full Maude which contains message and object constructs for object oriented specifications. Using these constructs it's possible to model ERTMS as several synchronously communicating processes. A Real Time Maude specification consists of  \emph{timed object oriented modules} which start with \texttt{tomod} and end with \texttt{endtom}.
 \medskip
 We can define the following:
 \begin{align*}
 \textbf{classes}: & \texttt{ class C | a1 : ⟨Sort-1⟩, ... , an : ⟨Sort-n⟩ . } \\
 \textbf{objects}: & \texttt{ < O : C | a1 : v1, ... , an : vn >  . } 
 \end{align*}
-where $C$ is the class identifier $O$ is the object name  $a_1 \ldots a_n$ are attribute names and $v_1 \ldots v_n$ are values. \\
+where $C$ is the class identifier, $O$ is the object name, $a_1 \ldots a_n$ are attribute names and $v_1 \ldots v_n$ are values. \\
 \medskip
 \subsubsection*{Messages}
 To model communicating processes Real Time Maude uses a messages construct:
@@ -237,7 +237,7 @@ To model communicating processes Real Time Maude uses a messages construct:
 \verb|msgs M1 ... Mn : Sort-1 ... Sort-n -> Msg . | 
 \end{center}
 
-The message construct acts as a container for data being passed between different communicating sub systems. Rewriting rules are used to capture the behaviour of sending and receiving messages between different objects.
+The message construct acts as a container for data being passed between different communicating sub-systems. Rewriting rules are used to capture the behaviour of sending and receiving messages between different objects.
 
 \subsubsection*{Configurations in Real Time Maude}
 Objects and messages in a specification are given a sort of \texttt{Configuration} which is a subsort of type \texttt{System}. The composition operation for configurations allows for a combination of objects and messages to form new configurations. This composition operation is also commutative meaning that the order of messages and objects in any configuration is ignored. This allows for more generalised rewriting rules in an object oriented specification that speak about specific objects and messages that are part of some bigger configuration as the order does not affect the firing of the rule.
@@ -255,7 +255,7 @@ mod CONFIGURATION is
 \end{lstlisting}
 
 \subsubsection*{Example Object Oriented Specification}
-The following is an example consisting of two classes of object which serves to demonstrate some of the advantages of object oriented specification as well as some of the pit falls. The first is the Counter class which defines objects that counts modulo 500 and transmits a message containing the current count. The second is the Reader class defining objects that read the messages produced by the Counter class. 
+The following is an example consisting of two classes of object which serves to demonstrate some of the advantages of object oriented specification as well as some of the pitfalls. The first is the Counter class which defines objects that count modulo 500 and transmit a message containing the current count. The second is the Reader class defining objects that read the messages produced by the Counter class. 
 
 \begin{lstlisting}[caption = Example object oriented specification, label = code:rtmaudeexample]
 (tomod EXAMPLE1 is protecting NAT-TIME-DOMAIN .
@@ -274,14 +274,14 @@ The following is an example consisting of two classes of object which serves to 
   {< O : Reader | count : N > REST}  . 
 endtom)
 \end{lstlisting} 
-We see in the above example several instances of objects being used in rewriting rules. The object < O : Counter | count : N > can be read as an object with an identifier O of class Counter with one attribute count which contains a value N.
+We see in the above example several instances of objects being used in rewriting rules. The object \texttt{< O : Counter | count : N >} can be read as an object with an identifier \texttt{O} of class \texttt{Counter} with one attribute count which contains a value \texttt{N}.
 
-We can execute a system consisting of a Counter  and a Reader object for 2 times steps using the following command:
+We can execute a system consisting of a Counter and a Reader object for two time steps using the following command:
 \begin{center}
 \texttt{(trew {< myCounter : Counter |  count : 0 > < myReader : Reader | count : 0 >} in time <= 2 .)}
 \end{center}
 
-Resulting in the following output:
+This results in the following output:
 \medskip
 \begin{lstlisting}
 rewrites: 6246 in 7ms cpu (7ms real) 
@@ -328,11 +328,11 @@ The following are some states reachable in time 2.
 \end{lstlisting}
 
 \section{Modelling the European Rail Traffic Management System}
-In the following we shall give an overview of the specifications used to model the ERTMS system. We have used the Real Time Maude system in an object oriented fashion following the hybrid automata described in chapter \ref{chap:hybrid} to define one class for each of the 3 hybrid automata. Time has been modelled by the use of a function $\mathrm{delta}$ that distributes the transition of time over objects in the system. Rewriting rules are then applied to $\mathrm{delta}$ containing singleton objects to give each individual object its behaviour. We attempt to remove as much non-determinism from the model as possible by forcing the ERTMS system to read all messages by the end of each time step and by preventing trains from making more than one movement authority request to the radio block processor in a given timestep.
+In the following we shall give an overview of the specifications used to model the ERTMS system. We have used the Real Time Maude system in an object oriented fashion following the hybrid automata described in chapter \ref{chap:hybrid} to define one class for each of the three hybrid automata. Time has been modelled by the use of a function $\mathrm{delta}$ that distributes the transition of time over objects in the system. Rewriting rules are then applied to $\mathrm{delta}$ containing singleton objects to give each individual object its behaviour. We attempt to remove as much non-determinism from the model as possible by forcing the ERTMS system to read all messages by the end of each time step and by preventing trains from making more than one movement authority request to the radio block processor in a given time step.
 
 
 \subsubsection*{Modelling the Transition of Time}
-In our previous Real Time Maude specifications we have had a rewrite rules that work on a specific object or state and increment time for the whole system. This presents a problem as we could have two objects that can both increment the time of the global system independently.  Since we are modelling a real life system all of the subsystems much be subjected to time in an equal manner. We need a way of incrementing the time of the whole global system and then distributing this increment of time amongst the objects of the system. To solve this problem we define operator $\mathrm{delta}$ which describes how distributed system evolves with time.
+In our previous Real Time Maude specifications we have had rewrite rules that work on a specific object or state and increment time for the whole system. This presents a problem as we could have two objects that can both increment the time of the global system independently.  Since we are modelling a real life system all of the subsystems much be subjected to time in an equal manner. We need a way of incrementing the time of the whole global system and then distributing this increment of time amongst the objects of the system. To solve this problem we define an operator $\texttt{delta}$ which describes how a distributed system evolves with time.
 
 \begin{lstlisting}[caption = The delta time transition operation, label = code:delta]
 op delta : Configuration -> Configuration [frozen] . 
@@ -344,10 +344,10 @@ rl [timetrans] : {OCREST} => {delta(OCREST)} in time 1 .
 rl [delta1] : delta(CON1 CON2) => delta(CON1)delta(CON2) .
 \end{lstlisting}
 
-The operation \texttt{nondelta} is frozen meaning that the configuration contained within will not be evaluated by the Maude until the $\mathrm{delta}$ operation has been evaluated. We only allow for time to be incremented on a global system containing an object configuration which cannot by definition contain any messages. This forces all messages sent in one time interval to be read during that interval. The delta1 rule distributes the delta operation over the constituent objects of a configuration until there are many deltas applied to configurations containing singleton objects. Each of these singleton objects has its own separately defined behaviour for the delta operation that captures that transition of time for that object. This was inspired by  \cite{PO07} where a delta operation is used to distribute time over a distributed sensor network. The \texttt{nondelta} operation is applied to objects to prevent the elapse of time by causing the object to have the sort \texttt{Configuration} instead of \texttt{ObjectConfiguration}.
+The operation \texttt{nondelta} is frozen meaning that the configuration contained within will not be evaluated by the Real Time Maude system until the $\texttt{delta}$ operation has been evaluated. We only allow for time to be incremented on a global system containing an object configuration which cannot by definition contain any messages. This forces all messages sent in one time interval to be read during that interval. The delta1 rule distributes the delta operation over the constituent objects of a configuration until there are many deltas applied to configurations containing singleton objects. Each of these singleton objects has its own separately defined behaviour for the delta operation that captures that transition of time for that object. This was inspired by  \cite{PO07} where a delta operation is used to distribute time over a distributed sensor network. The \texttt{nondelta} operation is applied to objects to prevent the lapse of time by causing the object to have the sort \texttt{Configuration} instead of \texttt{ObjectConfiguration}.
 
 \subsubsection*{Modelling Trains}
-We shall now describe the specification of trains. We define the Train class to have a state which like our hybrid automata can be in one of 4 possibilities, constant speed, accelerating, stopped and braking. As well as the state it also has 6 fields of sort Nat representing the distance, speed, acceleration, movement authority,  current track segment and max speed.
+We shall now describe the specification of trains. We define the Train class to have a state which like our hybrid automaton can be in one of four possibilities: constant speed, accelerating, stopped and braking. As well as the state it also has six fields of sort Nat representing the distance, speed, acceleration, movement authority,  current track segment and maximum speed.
 
 \begin{lstlisting}
 sort TrainState .
@@ -357,7 +357,7 @@ class Train | state : TrainState, dist : Nat, speed : Nat,
      ac : Nat, ma : Nat, tseg : Nat, maxspeed : Nat .
 \end{lstlisting}
 
-We capture the behaviour of trains using a number of instantaneous rules. The rules that model some transition of time can only occur if the \texttt{delta} operation, which captures the global transition of time, has been applied to the train object. There are also several rules that are applied to non-delta terms and cause message passing and reading in-between the application of the delta operation. The following is an example conditional rule which causes a jump from the constant speed to braking states in one unit of time:
+We capture the behaviour of trains using a number of instantaneous rules. The rules that model some transition of time can only occur if the \texttt{delta} operation, which captures the global transition of time, has been applied to the train object. There are also several rules that are applied to non-delta terms and cause message passing and reading in-between the application of the \texttt{delta} operations. The following is an example conditional rule which causes a jump from the constant speed to braking states in one unit of time:
 
 \begin{lstlisting}
   crl [consbrake] : delta(< O : Train | state : cons, 
@@ -368,9 +368,9 @@ We capture the behaviour of trains using a number of instantaneous rules. The ru
    if  dma(DT + S, MA)  <  bd(S + A) .
 \end{lstlisting}
 
-The left hand side contains a train which has had a delta operation applied to it, meaning that there has been some global transition of time which the train must now follow. The Maude system will automatically apply this rule to terms which pattern match the left hand side of the rule and meet the condition that the distance to the movement authority becomes less than the braking distance in the next time step. Once the rule has fired, the distance and speed of the train are incremented and two messages are added to the configuration. The message \texttt{reqma} is used to request a movement authority from the RBC and \texttt{pos} is used to update the trains position in the RBC. The \texttt{trackseg} operation is also applied to the train to compute if a track segment transition has occured or not. 
+The left hand side contains a train which has had a delta operation applied to it, meaning that there has been some global transition of time which the train must now follow. The Maude system will automatically apply this rule to terms which pattern match the left hand side of the rule and meet the condition that the distance to the movement authority becomes less than the braking distance in the next time step. Once the rule has fired, the distance and speed of the train are incremented and two messages are added to the configuration. The message \texttt{reqma} is used to request a movement authority from the RBC and \texttt{pos} is used to update the trains position in the RBC. The \texttt{trackseg} operation is also applied to the train to compute if a track segment transition has occurred or not. 
 
-For example if the a train is in the cons state and the braking condition is met then the next moment of time one of these rules will fire and cause a state transition to the braking state. 
+For example if the train is in the \texttt{cons} state and the braking condition is met then in the next moment of time one of these rules will fire and cause a state transition to the braking state. 
 
 We compute the braking distance as follows (See chapter \ref{sec:lawsofmotion}): 
 \begin{center}\texttt{eq bd(S) = (S * S) div 2 .}\end{center}
@@ -383,7 +383,7 @@ The distance to the movement authority to the train is computed by:
 \texttt{ceq dma(DT,MA) = (tlength monus DT) + MA if MA < DT .}
 \end{center}
 
-In this Maude specification the jumps from accelerating and full speed states to the braking state occur when the braking distance becomes less than the distance to the end of the movement authority in the next moment of time.  The transition of the train one from track segment to another is captured by applying an operation $\textbf{trackseg}$ to the train after every increment in time. The $\textbf{trackseg}$ operation computes whether a track segment transition has occurred, if it has then a message is sent to the interlocking to update its track segment variables accordingly.
+In this Maude specification the jumps from accelerating and full speed states to the braking state occur when the braking distance becomes less than the distance to the end of the movement authority in the next moment of time.  The transition of the train from one track segment to another is captured by applying an operation $\textbf{trackseg}$ to the train after every increment in time. The $\textbf{trackseg}$ operation computes whether a track segment transition has occurred. If it has then a message is sent to the interlocking to update its track segment variables accordingly.
 
 \begin{lstlisting}[caption = "Rewriting rules for the trackseg operation"]
 crl [transn] : trackseg(< O : Train | dist : DT, tseg : N >) => 
@@ -421,7 +421,7 @@ fmod SET{X :: TRIV} is
 
 \end{lstlisting}
 
-The individual elements the set are themselves are a subsort of set, allowing for sets to be constructed using the union operator \texttt{\_,\_} and singleton sets. The in operation computes set membership and is based on the \texttt{otherwise}  meaning that false case will only be applied once the search for true case has been exhausted.
+The individual elements in the set are themselves are a subsort of set, allowing for sets to be constructed using the union operator \texttt{\_,\_} and singleton sets. The in operation computes set membership and is based on the \texttt{otherwise}  meaning that false case will only be applied once the search for true case has been exhausted.
 
 \begin{lstlisting}[caption = The specification of the Map data type in Maude]
 fmod MAP{X :: TRIV, Y ::  TRIV} is
